Small fixes on margins and Safari column wrap

--- a/app/styles/components/_hero.scss
+++ b/app/styles/components/_hero.scss
@@ -22,7 +22,6 @@ $hero-max-width: 600px;
   margin-top: $Theme-margin-default;
 
   text-align: center;
-  text-transform: uppercase;
 }
 
 .Hero-heading {
