--- a/app/styles/components/_sponsor-grid.scss
+++ b/app/styles/components/_sponsor-grid.scss
@@ -6,8 +6,6 @@ $sponsor-cell-height: 80px;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-
-  margin-top: $Theme-margin-half;
 }
 
 .SponsorGrid-cell {
