--- a/app/styles/utilities/_margin.scss
+++ b/app/styles/utilities/_margin.scss
@@ -6,6 +6,10 @@
   margin: $Theme-margin-half 0 0 0;
 }
 
+.u-marginSmall {
+  margin: $Theme-margin-small 0 0 0;
+}
+
 .u-noMaringTop {
   margin-top: 0;
 }
